SubBt/force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <label>BT Product</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Product #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>