SubBt/force-app/main/default/objects/Product__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <label>Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>