SubBt/force-app/main/default/objects/Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>IM #</label>
    <referenceTo>Inventory_Management__c</referenceTo>
    <relationshipName>Products</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>