SubBt/force-app/main/default/objects/Product__c/fields/Quantity_Approved__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Approved__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Quantity will be approved automatically when service request is completed.</description>
    <label>Quantity Approved?</label>
    <type>Checkbox</type>
</CustomField>