SubBt/force-app/main/default/objects/Product__c/validationRules/Product_Out_of_Stock.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Out_of_Stock</fullName>
    <active>true</active>
    <errorConditionFormula>Quantity__c &gt;  Product__r.Current_Stock__c</errorConditionFormula>
    <errorDisplayField>Quantity__c</errorDisplayField>
    <errorMessage>This product is out of stock.</errorMessage>
</ValidationRule>