SubBt/force-app/main/default/objects/Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Total_Cost__c</columns>
    <columns>Description__c</columns>
    <columns>Quantity__c</columns>
    <columns>Quantity_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>